# sjaipy

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.devcontainer/: .env-example  .env.example  Dockerfile  devcontainer.json  docker-compose.yml  post_create_command.sh
sj_ai_utils/: __init__.py
sj_ai_utils/asr/: __init__.py  whisper_utils.py
sj_ai_utils/datasets/: __init__.py  dataset.py  esic_v1.py  libri_speech_asr_corpus.py  sclite.py
sj_ai_utils/datasets/esic_v1/: __init__.py  esic_v1.py  esic_v1_dataset.py  sclite.py  service.py
sj_ai_utils/datasets/hugging_face/: __init__.py  ami.py  hugging_face_dataset.py  ksponspeech.py  tedlium.py  vox_populi.py  zeroth_korean.py
sj_ai_utils/datasets/l_hotse/: ami.py  (+5 more)
sj_ai_utils/evaluator/: __init__.py  sclite_utils.py
sj_ai_utils/hugging_face/: __init__.py  dataset_loader.py  sclite.py  util.py
sj_ai_utils/l_hotse/: __init__.py  ami.py  libri_speech.py  sclite.py  tedlium.py  util.py  vox_populi.py
sj_ai_utils/torch/: __init__.py  checkpoint.py  service.py
sjaipy/: __init__.py
sjaipy/asr/: __init__.py  whisper_utils.py
sjaipy/datasets/: __init__.py  dataset.py
sjaipy/evaluator/: __init__.py  sclite_utils.py
sjaipy/torch/: __init__.py  service.py
test/datasets/: ami.ipynb  esic.ipynb  libri.ipynb  tedlium.ipynb  vox_populi.ipynb
test/hugging_face/: ami.ipynb  ksponspeech.ipynb  tedlium.ipynb  vox_populi.ipynb  zeroth_korean.ipynb
test/l_hotse/: ami.ipynb  libri_speech.ipynb  tedlium.ipynb  vox_populi.ipynb
tests/: pytest.ini
tests/scripts/: test.ipynb
(+75 files in other folders)
