[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "datasets==3.6.0",
    "faster-whisper==1.2.0",
    "ffmpeg-python>=0.2.0",
    "lhotse>=1.31.1",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
]
