[project]
name = "sjaipy"
version = "0.1.0"
description = "Custom AI utilities"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "datasets==3.6.0",
    "faster-whisper==1.2.0",
    "ffmpeg-python>=0.2.0",
    "lhotse>=1.31.1",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "sjpy @ file:${PROJECT_ROOT}/modules/sjpy"
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.10",
    "notebook>=7.4.7",
]
test = [
    "pytest>=8.4.2",
    "pytest-dotenv>=0.5.2",
]

[tool.pytest.ini_options]
env_files=[".env"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sjaipy*"]
